# BI-PA2-CPP

./: .gitignore
Aurorion/: CMakeLists.txt  Doxyfile  GameObject.cpp  GameObject.h  Makefile  README.md  a.out  game.cpp  game.h  main.cpp  player.cpp  player.h  prohlaseni.txt  texture_manager.cpp  texture_manager.h  zadani.txt
Aurorion/Sources/: CCamera.cpp  CCamera.h  CCollider.cpp  CCollider.h  CCollisionHandler.cpp  CCollisionHandler.h  CEnemy.cpp  CEnemy.h  CEntity.cpp  CEntity.h  CGame.cpp  CGame.h  CGameLayer.cpp  CGameLayer.h  CGameObject.cpp  CGameObject.h  CGameplayLayer.cpp  CGameplayLayer.h  CHudLayer.cpp  CHudLayer.h  CInputHandler.cpp  CInputHandler.h  CMap.cpp  CMap.h  CMapBackgroundLayer.cpp  CMapBackgroundLayer.h  CMapLayer.cpp  CMapLayer.h  CMapParser.cpp  CMapParser.h  CPlayer.cpp  CPlayer.h  CRigidBody.cpp  CRigidBody.h  CTextureManager.cpp  CTextureManager.h  CTileLayer.cpp  CTileLayer.h  CTileSet.cpp  CTileSet.h  (+18 more)
Aurorion/assets/: DOCUMENTATION.md
Aurorion/doc/: DOCUMENTATION.md
Aurorion/examples/NewGame/: BackGroundLayer.json  EnemyConfig.json  GameObjectData.json  map.tmx
Aurorion/examples/SaveGame1/: BackGroundLayer.json  EnemyConfig.json  GameObjectData.json
Aurorion/src/: CCamera.cpp  CCamera.h  CCollider.cpp  CCollider.h  CCollisionHandler.cpp  CCollisionHandler.h  CEnemy.cpp  CEnemy.h  CEntity.cpp  CEntity.h  CGame.cpp  CGame.h  CGameLayer.cpp  CGameLayer.h  CGameObject.cpp  CGameObject.h  CGameObjectFactory.cpp  CGameObjectFactory.h  CGameplayLayer.cpp  CGameplayLayer.h  CHudLayer.cpp  CHudLayer.h  CInputHandler.cpp  CInputHandler.h  CMap.cpp  CMap.h  CMapBackgroundLayer.cpp  CMapBackgroundLayer.h  CMapLayer.cpp  CMapLayer.h  CMapParser.cpp  CMapParser.h  CPlayer.cpp  CPlayer.h  CRigidBody.cpp  CRigidBody.h  CTextureManager.cpp  CTextureManager.h  CTileLayer.cpp  CTileLayer.h  (+11 more)
Aurorion/src/SDL2/include/: SDL_events.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_hints.h  SDL_joystick.h
Aurorion/src/SDL2_image-2.6.3/: CHANGES.txt  README.txt
ProgTest01/: test.cpp
ProgTest02/: test4.cpp
ProgTest03/: test.cpp
ProgTest04/: test.cpp
ProgTest05/: test.cpp
(+4 files in other folders)
